<resources>
    <string name="app_name">AJR-27002018-WORKAROUND-ASYNC-SERVICES</string>
    <string name="action_settings">Settings</string>
    <string name="maintext">An Android application for working with Async Programming and Services.\nDated : 27-Feb-2018 06:00 PM \n</string>
    <string name="dowork">Do Work</string>
    <string name="exit">Exit</string>
    <string name="this_is_a_textview">This is a TextView</string>
    <string name="do_work_async">Do Work - Async</string>
    <string name="do_work_simple_service">Do Work - Simple Service</string>
    <string name="ext_lc_svc">Do Work - Extended Life Cycle Service</string>
    <string name="do_work_extended_life_cycle_thread_service">Do Work - Extended Life Cycle Thread Service</string>
    <string name="stopmechanism">Do Work - Extended LC Stop Mechanism</string>
    <string name="do_work_extended_lc_fore_grd_service">Do Work - Extended LC Fore-GRD Service</string>
    <string name="access_web_json_volley">Access web JSON - Volley</string>
    <string name="title_activity_volley">ActivityVolley</string>
    <string name="android_now_to_work_with_volley">Android - Now to work with volley</string>
    <string name="volley_google_location_detection">Volley - Google - My Location Detection</string>
    <string name="volley_simple_service">Volley - Simple Service</string>
    <string name="this_is_a_simple_call_to_volley">This is a simple call to volley</string>
    <string name="this_shows_the_address_based_on_latitude_and_longitude_of_my_home_location">This shows the address based on latitude and longitude of my home location</string>
    <string name="volley_google_cache">Volley - Google - Cache</string>
    <string name="volley_google_singleton_cache">Volley - Google - Singleton Cache</string>
</resources>
