<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.workaround.ajeesh.ajr_27002018_workaround_async_services.ActivityMain">
    <item
        android:id="@+id/menuDoWork"
        android:title="@string/dowork" />
    <item
        android:id="@+id/menuDoWorkAsynchronously"
        android:title="@string/do_work_async" />
    <item
        android:id="@+id/menuDoWorkSimpleService"
        android:title="@string/do_work_simple_service" />
    <item
        android:id="@+id/menuDoWorkExtendedLifeCycleService"
        android:title="@string/ext_lc_svc" />
    <item
        android:id="@+id/menuDoWorkExtendedLifeCycleThreadService"
        android:title="@string/do_work_extended_life_cycle_thread_service" />
    <item
        android:id="@+id/menuDoWorkExtendedLifeCycleThreadStopMechanismService"
        android:title="@string/stopmechanism" />
</menu>
